--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"apollo-server": "^2.9.3",
+		"apollo-server": "^2.9.4",
+		"braces": "2.3.1",
 		"express": "^4.17.1",
 		"express-graphql": "^0.9.0",
-		"graphql": "^14.5.6",
+		"graphql": "^14.5.8",
 		"mysql2": "^1.7.0",
 		"ramda": "^0.26.1",
-		"sequelize": "^5.18.4",
+		"sequelize": "^5.19.1",
 		"sequelize-cli": "^5.5.1"
 	},
 	"devDependencies": {
